<resources>
    <string name="app_name">My Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegree_apps_name">My Nanodegree Apps!</string>
    <string name="button_spotify_name">Spotify Streamer</string>
    <string name="button_scores_name">Scores App</string>
    <string name="button_library_name">Library App</string>
    <string name="button_buildit_name">Build It Bigger</string>
    <string name="button_xyzreader_name">XYZ Reader</string>
    <string name="button_own_name">Capstone: My Own App</string>
    <string name="onclick_message">This will start %s</string>
</resources>
