<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    style="@style/ActivityStyle"
    android:id="@+id/activity_main">

    <TextView android:text="@string/nanodegree_apps_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/text_button_gap"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_spotify_name"
        android:id="@+id/button_spotify"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        style="@style/ButtonStyle" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scores_name"
        android:id="@+id/button_scores"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        style="@style/ButtonStyle" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_library_name"
        android:id="@+id/button_library"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        style="@style/ButtonStyle" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_buildit_name"
        android:id="@+id/button_buildit"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        style="@style/ButtonStyle" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_xyzreader_name"
        android:id="@+id/button_xyzreader"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        style="@style/ButtonStyle" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_own_name"
        android:id="@+id/button_own_app"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        style="@style/CapstoneButtonStyle" />

</LinearLayout>
